logs/dag_id=dag_allocate_messages/run_id=manual__2024-04-03T09:31:57.754890+00:00/task_id=delete_original_messages/attempt=2.log
[2024-04-03T09:37:04.583+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: dag_allocate_messages.delete_original_messages manual__2024-04-03T09:31:57.754890+00:00 [queued]>
[2024-04-03T09:37:04.604+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: dag_allocate_messages.delete_original_messages manual__2024-04-03T09:31:57.754890+00:00 [queued]>
[2024-04-03T09:37:04.605+0000] {taskinstance.py:2193} INFO - Starting attempt 2 of 6
[2024-04-03T09:37:04.630+0000] {taskinstance.py:2214} INFO - Executing <Task(PythonOperator): delete_original_messages> on 2024-04-03 09:31:57.754890+00:00
[2024-04-03T09:37:04.638+0000] {standard_task_runner.py:60} INFO - Started process 12207 to run task
[2024-04-03T09:37:04.648+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'dag_allocate_messages', 'delete_original_messages', 'manual__2024-04-03T09:31:57.754890+00:00', '--job-id', '1252', '--raw', '--subdir', 'DAGS_FOLDER/dag_allocate_messages.py', '--cfg-path', '/tmp/tmps8m8384q']
[2024-04-03T09:37:04.654+0000] {standard_task_runner.py:88} INFO - Job 1252: Subtask delete_original_messages
[2024-04-03T09:37:04.755+0000] {task_command.py:423} INFO - Running <TaskInstance: dag_allocate_messages.delete_original_messages manual__2024-04-03T09:31:57.754890+00:00 [running]> on host af8488263d95
[2024-04-03T09:37:04.954+0000] {taskinstance.py:2510} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='daniel' AIRFLOW_CTX_DAG_ID='dag_allocate_messages' AIRFLOW_CTX_TASK_ID='delete_original_messages' AIRFLOW_CTX_EXECUTION_DATE='2024-04-03T09:31:57.754890+00:00' AIRFLOW_CTX_TRY_NUMBER='2' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-04-03T09:31:57.754890+00:00'
[2024-04-03T09:37:04.957+0000] {logging_mixin.py:188} INFO - delete original messages
[2024-04-03T09:37:05.033+0000] {base.py:83} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-04-03T09:37:05.058+0000] {taskinstance.py:2728} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 444, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 414, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 200, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 217, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/dag_allocate_messages.py", line 152, in delete_original_messages
    cursor.execute("DELETE FROM messages WHERE msg_id = {}".format(id))
psycopg2.errors.SyntaxError: syntax error at or near "["
LINE 1: DELETE FROM messages WHERE msg_id = ['2', '5']
                                            ^

[2024-04-03T09:37:05.074+0000] {taskinstance.py:1149} INFO - Marking task as UP_FOR_RETRY. dag_id=dag_allocate_messages, task_id=delete_original_messages, execution_date=20240403T093157, start_date=20240403T093704, end_date=20240403T093705
[2024-04-03T09:37:05.099+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 1252 for task delete_original_messages (syntax error at or near "["
LINE 1: DELETE FROM messages WHERE msg_id = ['2', '5']
                                            ^
; 12207)
[2024-04-03T09:37:05.141+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-04-03T09:37:05.173+0000] {taskinstance.py:3309} INFO - 0 downstream tasks scheduled from follow-on schedule check
